--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
 			<artifactId>spring-boot-starter-data-redis-reactive</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
 		</dependency>
@@ -62,7 +66,7 @@
 		<dependency>
 			<groupId>com.redislabs</groupId>
 			<artifactId>jredisearch</artifactId>
-			<version>0.11.0</version>
+			<version>0.12.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
