added image URL fetching

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 #logging.level.root=DEBUG
 masters-file=https://discogs-data.s3-us-west-2.amazonaws.com/data/2018/discogs_20180801_masters.xml.gz
+discogs-api-url=https://api.discogs.com/masters/{id}
