--- a/server/pom.xml
+++ b/server/pom.xml
@@ -68,6 +68,11 @@
 			<artifactId>jredisearch</artifactId>
 			<version>0.12.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
