shortened default image URL

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.cache.cache-names=images
 masters-file=https://discogs-data.s3-us-west-2.amazonaws.com/data/2018/discogs_20180801_masters.xml.gz
 discogs-api-url=https://api.discogs.com/masters/{id}
 user-agent=com.redislabs.rediscogs.useragent
-default-image-uri=https://upload.wikimedia.org/wikipedia/en/1/1c/Rick_Astley_-_Whenever_You_Need_Somebody.png
+default-image-uri=https://bit.ly/2QNdRta
