--- a/server/pom.xml
+++ b/server/pom.xml
@@ -58,11 +58,11 @@
 			<artifactId>spring-batch-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>com.redislabs</groupId> -->
-		<!-- <artifactId>jredisearch</artifactId> -->
-		<!-- <version>0.12.0-SNAPSHOT</version> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>com.redislabs</groupId>
+			<artifactId>jredisearch</artifactId>
+			<version>0.12.0-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
@@ -73,15 +73,15 @@
 			<artifactId>client</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>com.redislabs</groupId>
-			<artifactId>lettusearch</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-pool2</artifactId>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.redislabs</groupId> -->
+<!-- 			<artifactId>lettusearch</artifactId> -->
+<!-- 			<version>0.0.1-SNAPSHOT</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.commons</groupId> -->
+<!-- 			<artifactId>commons-pool2</artifactId> -->
+<!-- 		</dependency> -->
 	</dependencies>
 
 	<build>
