--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 applications:
 - name: rediscogs
   memory: 1024M
-  path: server/target/server-0.0.1-SNAPSHOT.jar
+  path: server/target/rediscogs-server-0.0.1-SNAPSHOT.jar
   services:
   - rediscogs_redis
