--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,15 +1,7 @@
 #logging.level.root=DEBUG
 spring.cache.cache-names=images
 spring.cache.redis.time-to-live=600000
-skip-load=false
-batch-size=50
 masters-file=https://discogs-data.s3-us-west-2.amazonaws.com/data/2018/discogs_20180801_masters.xml.gz
-masters-index=mastersIdx
-artists-suggestion-index=artistsSuggestionIdx
 discogs-api-url=https://api.discogs.com/masters/{id}
-discogs-api-token=wIiSVkiwZqkUwvcIEbAGhVvwNtssoidsqOPQDorz
-discogs-api-delay=100
 discogs-api-user-agent=com.redislabs.rediscogs.useragent
-redisearch-host=localhost
-redisearch-port=6379
-search-results-limit=20
+image-filter=@image:"true"
