--- a/server/pom.xml
+++ b/server/pom.xml
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>com.redislabs</groupId>
 			<artifactId>jredisearch</artifactId>
-			<version>0.12.0-SNAPSHOT</version>
+			<version>0.12.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -74,15 +74,6 @@
 			<artifactId>rediscogs-client</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>com.redislabs</groupId> -->
-		<!-- <artifactId>lettusearch</artifactId> -->
-		<!-- <version>0.0.1-SNAPSHOT</version> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.apache.commons</groupId> -->
-		<!-- <artifactId>commons-pool2</artifactId> -->
-		<!-- </dependency> -->
 	</dependencies>
 
 	<build>
