added support for other entities (releases, artists, labels)

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #logging.level.root=DEBUG
 spring.cache.cache-names=images
 spring.cache.redis.time-to-live=600000
-masters-file=https://discogs-data.s3-us-west-2.amazonaws.com/data/2018/discogs_20180801_masters.xml.gz
-discogs-api-url=https://api.discogs.com/masters/{id}
-discogs-api-user-agent=com.redislabs.rediscogs.useragent
+discogs.file-url-template=https://discogs-data.s3-us-west-2.amazonaws.com/data/2018/discogs_20181001_{entity}.xml.gz
+discogs.url=https://api.discogs.com/{entity}/{id}
+discogs.user-agent=com.redislabs.rediscogs.useragent
 image-filter=@image:"true"
