--- a/server/pom.xml
+++ b/server/pom.xml
@@ -69,6 +69,11 @@
 			<artifactId>jredisearch</artifactId>
 			<version>0.16.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.ruaux</groupId>
+			<artifactId>jdiscogs</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
