upgraded to JDiscogs 0.0.8 updated README for configuration options

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,3 +2,7 @@
 spring.cache.cache-names=images
 spring.cache.redis.time-to-live=600000
 image-filter=@image:"true"
+artist-id-filter=@artistId:{artistId}
+discogs.data.jobs=masterindex
+spring.task.execution.pool.core-size=1
+spring.redis.jedis.pool.max-active=1
