--- a/server/pom.xml
+++ b/server/pom.xml
@@ -68,7 +68,7 @@
 				<configuration>
 					<repository>redislabs/rediscogs</repository>
 					<buildArgs>
-						<JAR_FILE>target/server-${project.version}.jar</JAR_FILE>
+						<JAR_FILE>target/${project.artifactId}-${project.version}.jar</JAR_FILE>
 					</buildArgs>
 				</configuration>
 			</plugin>
