--- a/server/pom.xml
+++ b/server/pom.xml
@@ -41,7 +41,7 @@
 		<dependency>
 			<groupId>org.ruaux</groupId>
 			<artifactId>jdiscogs</artifactId>
-			<version>0.0.9</version>
+			<version>0.0.10-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
