--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.cache.redis.time-to-live=600000
 image-filter=@image:"true"
 artist-id-filter=@artistId:{artistId}
 discogs.data.jobs=masterindex
+spring.task.execution.pool.max-size=8
+spring.task.execution.pool.core-size=8
