upgraded to jdiscogs 1.0.0

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.cache.redis.time-to-live=600000
 image-filter=@image:"true"
 artist-id-filter=@artistId:{artistId}
 discogs.data.jobs=masterindex
+spring.task.execution.pool.max-size=2
+spring.task.execution.pool.core-size=2
+spring.redis.lettuce.pool.max-active=2
