UI rework: query textfield is the actual search run on the server

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.redislabs</groupId>
 	<artifactId>rediscogs-client</artifactId>
-	<version>0.0.3-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 	<build>
 		<resources>
