--- a/client/pom.xml
+++ b/client/pom.xml
@@ -3,10 +3,14 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>com.redislabs</groupId>
+	<parent>
+		<groupId>com.redislabs</groupId>
+		<artifactId>rediscogs</artifactId>
+		<version>1.2.0</version>
+	</parent>
 	<artifactId>rediscogs-client</artifactId>
-	<version>1.0.0</version>
+	<name>ReDiscogs Client</name>
+	<description>Angular client for ReDiscogs</description>
 
 	<build>
 		<resources>
