--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,18 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.4.RELEASE</version>
+		<relativePath /> <!-- lookup parent from repository -->
+	</parent>
+
 	<groupId>com.redislabs</groupId>
-	<artifactId>rediscogs-parent</artifactId>
-	<version>1.0.0</version>
+	<artifactId>rediscogs</artifactId>
+	<version>1.2.0</version>
 	<packaging>pom</packaging>
+	<name>ReDiscogs Parent</name>
 
 	<modules>
 		<module>client</module>
