--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,20 +4,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.4.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>com.redislabs</groupId>
+		<artifactId>rediscogs</artifactId>
+		<version>1.2.0</version>
 	</parent>
-	<groupId>com.redislabs</groupId>
 	<artifactId>rediscogs-server</artifactId>
-	<version>1.2.0</version>
 	<packaging>jar</packaging>
-	<name>rediscogs-server</name>
-
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
+	<name>ReDiscogs Server</name>
+	<description>Spring Web application for ReDiscogs</description>
 
 	<dependencies>
 		<dependency>
@@ -36,12 +30,12 @@
 		<dependency>
 			<groupId>com.redislabs</groupId>
 			<artifactId>rediscogs-client</artifactId>
-			<version>1.0.0</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.ruaux</groupId>
 			<artifactId>jdiscogs</artifactId>
-			<version>1.0.4</version>
+			<version>1.0.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -56,6 +50,14 @@
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
 			<artifactId>jaxb-runtime</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 	</dependencies>
 
