added favorite album page

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 spring.cache.cache-names=images
 spring.cache.redis.time-to-live=600000
 discogs.data.jobs=masterindex
+server.servlet.context-path=/api
