added hashed URLs for angular

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.redislabs</groupId>
 		<artifactId>rediscogs</artifactId>
-		<version>1.2.0</version>
+		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>rediscogs-client</artifactId>
 	<name>ReDiscogs Client</name>
