--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 	<groupId>com.redislabs</groupId>
 	<artifactId>rediscogs</artifactId>
-	<version>1.2.0</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>ReDiscogs Parent</name>
 
