--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
 	<packaging>pom</packaging>
 	<name>ReDiscogs Parent</name>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+
+
 	<modules>
 		<module>client</module>
 		<module>server</module>
