--- a/server/pom.xml
+++ b/server/pom.xml
@@ -51,7 +51,7 @@
 		<dependency>
 			<groupId>org.ruaux</groupId>
 			<artifactId>jdiscogs</artifactId>
-			<version>1.0.8-SNAPSHOT</version>
+			<version>1.0.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
