removed CacheConfig as it was overriding cache configuration from properties and command line

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 #logging.level.root=DEBUG
 spring.cache.cache-names=images
-spring.cache.redis.time-to-live=365d
+spring.cache.redis.time-to-live=600000
 discogs.data.jobs=masterindex
