--- a/rediscogs-ui/package.json
+++ b/rediscogs-ui/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "client",
+  "name": "rediscogs-ui",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --output-hashing=all --output-path ui-src/META-INF/resources",
+    "start": "ng serve --proxy-config proxy.conf.json",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "start": "ng serve --proxy-config proxy.conf.json",
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.14",
