added discogs API token env variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     environment:
       SPRING_REDIS_HOST: redisearch
       STOMP_PORT: 80
+      DISCOGS_API_TOKEN: ${DISCOGS_API_TOKEN}
 
   redisearch:
     image: redislabs/redisearch:latest
